Apply JDK 21 modernizations and fix authorization for non-JSPWiki permissions
Modernize codebase to leverage JDK 21 language features:
- Pattern matching for instanceof (12+ files)
- Stream.toList() instead of collect(Collectors.toList()) (8 files)
- String.isBlank() instead of trim().isEmpty() (5 files)
- Set.of() for immutable collections (2 files)
- Switch expressions with arrow syntax (3 event classes)

Fix authorization regression where non-JSPWiki permissions (like PropertyPermission
used as DUMMY_PERMISSION in WikiContext) were incorrectly denied after the removal
of AccessController.checkPermission(). The local policy only handles JSPWiki-specific
permissions, so non-JSPWiki permissions are now automatically allowed.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>